<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/query_one_item"
        android:title="@string/Query_one_item"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/query_out_list"
        android:title="@string/Query_out_list"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/query_in_list"
        android:title="@string/Query_in_list"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/query_finish_list"
        android:title="@string/Query_finish_list"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"
        />
</menu>