<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.njfu.scandemo.MainActivity"
    >

    <TextView
        android:id="@+id/login_result"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorLogin"
        android:text="@string/login"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/method_result"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/method"
        android:textSize="15dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="0.97">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_scan_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:text=""
                android:textSize="15dp"
                android:visibility="visible" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/SingleButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:onClick="functions1"
            android:enabled="false"
            android:text="@string/SingleButton" />

        <Button
            android:id="@+id/Finished"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:onClick="finished"
            android:enabled="false"
            android:text="@string/Finished" />

        <Button
            android:id="@+id/Functions"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:onClick="functions2"
            android:enabled="false"
            android:text="@string/Functions" />

    </LinearLayout>

</LinearLayout>